<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bk_mob">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/e_recyclelogo"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginBottom="5dp"
            android:textColor="#fff"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insira_seu_login"
            android:textColorHint="#ccc"
            android:padding="5dp"
            android:inputType="textPersonName"
            android:textSize="25sp"
            android:background="@drawable/etxt_login"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/senha"
            android:textColor="#fff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/etxt_login"
            android:hint="@string/insira_sua_senha"
            android:padding="5dp"
            android:textColorHint="#ccc"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#DD2C00"
            android:text="@string/esqueci_minha_senha"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/entrar"
                android:textAllCaps="true"/>

            <Button
                android:id="@+id/lCadastro"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/cadastro"
                android:textAllCaps="true"
                android:layout_toRightOf="@id/btnEntrar"
                android:layout_toEndOf="@id/btnEntrar" />
        </RelativeLayout>
        <TextView
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:text="@string/e_recycle_todos_os_direitos_reservados_2019"
            android:textColor="#fff"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
</LinearLayout>