<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Recicladores_Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mRecicladores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="E Recycle"
        app:titleTextColor="#fff">

    </androidx.appcompat.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#fff"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="#395A3A" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/recicladores"
            android:textColor="#fff"
            android:textSize="28sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person"
            android:drawableRight="@drawable/ic_message"
            android:gravity="start"
            android:text="@string/rosenildo" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person"

            android:drawableRight="@drawable/ic_message"
            android:gravity="start"
            android:text="@string/jack" />
    </LinearLayout>
</LinearLayout>