<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Cadastro_Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Cadastro"
        app:titleTextColor="#fff">
    </androidx.appcompat.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#fff"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:textColor="#fff"
                android:textSize="28sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/etxt_login"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="#777777"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/e_mail"
                android:textColor="#fff"
                android:textSize="28sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/etxt_login"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="#777777"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/senha"
                android:textColor="#fff"
                android:textSize="28sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/etxt_login"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="#777777"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/telefone"
                android:textColor="#fff"
                android:textSize="28sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/etxt_login"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="#777777"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/cadastrar"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:background="@drawable/btn_entrar"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>